--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
 <body>
     <div class="container">
         <h1>👋 Hi, I’m @RiderAI</h1>
-        <p>👀 I’m interested in ...</p>
-        <p>🌱 I’m currently learning ...</p>
-        <p>💞️ I’m looking to collaborate on ...</p>
-        <p>📫 How to reach me ...</p>
-        <p>😄 Pronouns: ...</p>
-        <p>⚡ Fun fact: ...</p>
+        <p>👀 I’m interested in Machine Learning, Information Security, and Programming in Java and Python.</p>
+        <p>🌱 I’m currently learning advanced machine learning algorithms and cybersecurity techniques.</p>
+        <p>💞️ I’m looking to collaborate on innovative ML projects and cybersecurity solutions.</p>
+        <p>📫 How to reach me: <a href="mailto:i@03t.ru">i@03t.ru</a></p>
+        <p>😄 Pronouns: They/Them</p>
+        <p>⚡ Fun fact: I enjoy solving complex puzzles and participating in capture-the-flag (CTF) competitions.</p>
     </div>
 </body>
 </html>
