--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <p>🌱 I’m currently learning advanced machine learning algorithms and cybersecurity techniques.</p>
         <p>💞️ I’m looking to collaborate on innovative ML projects and cybersecurity solutions.</p>
         <p>📫 How to reach me: <a href="mailto:i@03t.ru">i@03t.ru</a></p>
-        <p>😄 Pronouns: They/Them</p>
+        <p>😄 Telegram: @Azukx</p>
         <p>⚡ Fun fact: I enjoy solving complex puzzles and participating in capture-the-flag (CTF) competitions.</p>
     </div>
 </body>
